Fixed cookie consent for not taking full width of screen on mobile. (#42)

--- a/assets/styles/cookie-consent.scss
+++ b/assets/styles/cookie-consent.scss
@@ -133,6 +133,10 @@
   padding: 1em 2em;
   background-color: white;
   color: #666;
+
+  @media screen and (max-width: 550px) {
+    max-width: 100%;
+  }
 }
 
 .cookie-consent__icon {
